--- a/config/config.yaml
+++ b/config/config.yaml
@@ -85,10 +85,11 @@ rss:
       url: "https://hnrss.org/frontpage"
       # max_age_days: 1               # 示例：只推送1天内的文章
 
-    - id: "ruanyifeng"
-      name: "阮一峰的网络日志"
-      url: "http://www.ruanyifeng.com/blog/atom.xml"
-      # max_age_days: 7               # 示例：推送7天内的文章（更新较慢的博客）
+    - id: "gasgoo-auto"
+      name: "Gasgoo"
+      url: "https://auto.gasgoo.com/Rss/ClassRss.aspx?ClassId=107"
+      max_age_days: 3               # 示例：只推送1天内的文章
+      
 
     # 自定义源示例
     # - id: "custom-feed"
